# verilator-bin

./: .envrc  .gitignore  CMakeLists.txt  README.md  build_updates.md  ivpm.yaml
.github/workflows/: ci.yml  release.yml
scripts/: build.sh
tests/: flow.yaml
